blocks/form/components/formhero/formhero.scss
@use '../../../../styles/settings' as *;

.wizard {
  // Temporary specificity
  // Remove this as the grid component come in
  .panel-formhero.current-wizard-step[data-index='0'] {
    display: flex;
    flex-direction: column;
    padding-left: $spacing-600;
    padding-right: $spacing-600;

    @include media('desktop') {
      flex-direction: row;
      justify-content: center;
      gap: $spacing-400 0;
    }

    legend {
      display: none;
    }
  }

  .panel-formhero__inner {
    @include media('desktop') {
      align-items: center;
    }
  }
  .panel-formhero__picture {
    margin-bottom: $spacing-600;
    max-width: 311px;

    @include media('desktop') {
      margin-bottom: 0;
      max-width: 458px;
    }
  }

  .panel-formhero__content {
    order: 1;

    h2 {
      @include heading-level-1;
      margin-top: 0;
      margin-bottom: $spacing-500;
    }

    p {
      @include font-body-large;
      margin-bottom: 12px;
    }

    @include media('desktop') {
      order: 0;
      max-width: 577px;
    }
  }
}

